# nyt-most-popular-api-2.0.0-python-1.0.0

./: .manifest.json  install.cmd  install.sh  pyproject.toml
documentation/models/: EmailedArticle.md  GetEmailedPeriodJsonOkResponse.md  GetEmailedPeriodJsonPeriod.md  GetSharedByPeriodShareTypeJsonOkResponse.md  GetSharedByPeriodShareTypeJsonPeriod.md  GetSharedPeriodJsonOkResponse.md  GetSharedPeriodJsonPeriod.md  GetViewedPeriodJsonOkResponse.md  GetViewedPeriodJsonPeriod.md  Media.md  MediaMetadata.md  ShareType.md  SharedArticle.md  ViewedArticle.md
documentation/services/: MostPopularService.md
examples/: install.cmd  install.sh  sample.py
src/nyt_most_popular.egg-info/: PKG-INFO
